feat(basic-main): Add a new 'basic-main-java' template

--- a/templates/basic-game-java/src/main/resources/config.properties
+++ b/templates/basic-game-java/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-app.name=*{PROJECT_NAME}
+app.name=${PROJECT_NAME}
 app.version=${PROJECT_VERSION}
 app.author=${AUTHOR_NAME}<${AUTHOR_EMAIL}>
 app.window.size=800x600
