--- a/templates/basic-game-java/.template
+++ b/templates/basic-game-java/.template
@@ -1,5 +1,5 @@
 {
-    "name": "basic-java",
+    "name": "basic-game-java",
     "version": "1.0.0",
     "language": "Java",
     "tags": [
@@ -8,7 +8,7 @@
         "build-script",
         "junit"
     ],
-    "description": "A basic Java project template with standard structure and build files.",
+    "description": "A basic game Java project template with standard structure and build files.",
     "author": "Frédéric Delorme",
     "contact": "frederic.delorme@gmail.com",
     "created_at": "2025-12-02T21:56:00Z",
