fix templates naming convention

--- a/templates/java-basic-game/build
+++ b/templates/java-basic-game/build
@@ -50,7 +50,7 @@ PROJECT_NAME=${PROJECT_NAME}
 PROJECT_VERSION=${PROJECT_VERSION}
 MAIN_CLASS=${PACKAGE}.${MAINCLASS}
 AUTHOR_NAME="${AUTHOR_NAME}<${AUTHOR_EMAIL}>"
-VENDOR_NAME="vendor_${VENDOR_NAME}"
+VENDOR_NAME="${VENDOR_NAME}"
 # Compilation options
 COMPILATION_OPTS=
 # align the JDK version in the below SOURCE_VERSION variable
