--- a/templates/java-basic-game/.template
+++ b/templates/java-basic-game/.template
@@ -1,15 +1,14 @@
 {
-    "name": "game-fps",
+    "name": "java-basic-game",
     "version": "1.0.0",
     "language": "Java",
     "tags": [
-        "game",
-        "fps",
+        "basic",
         "java",
         "build-script",
         "junit"
     ],
-    "description": "A Java project template for a 2d game with gameloop based on constant Frame-Per-Second.",
+    "description": "A basic game Java project template with standard structure and build files.",
     "author": "Frédéric Delorme",
     "contact": "frederic.delorme@gmail.com",
     "created_at": "2025-12-02T21:56:00Z",
