--- a/templates/java-game-fps/.template
+++ b/templates/java-game-fps/.template
@@ -1,14 +1,15 @@
 {
-    "name": "basic-game-java",
+    "name": "java-game-fps",
     "version": "1.0.0",
     "language": "Java",
     "tags": [
-        "basic",
+        "game",
+        "fps",
         "java",
         "build-script",
         "junit"
     ],
-    "description": "A basic game Java project template with standard structure and build files.",
+    "description": "A Java project template for a 2d game with gameloop based on constant Frame-Per-Second.",
     "author": "Frédéric Delorme",
     "contact": "frederic.delorme@gmail.com",
     "created_at": "2025-12-02T21:56:00Z",
